# ngx-tabs-libdemo

./: BUILD.bazel  WORKSPACE  package.json
src/: BUILD.bazel  ngx-tabs-lib.module.ts  public_api.ts  tab.component.ts
src/tokens/: BUILD.bazel  public_api.ts
